--- a/package.json
+++ b/package.json
@@ -38,11 +38,15 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.9",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
     "eslint": "^6.6.0",
     "nodemon": "^1.19.4",
     "typescript": "^3.7.2"
+  },
+  "dependencies": {
+    "mongoose": "^5.7.11"
   }
 }
