--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.9",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
@@ -47,6 +48,7 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "mongoose": "^5.7.11"
   }
 }
