--- a/package.json
+++ b/package.json
@@ -40,15 +40,18 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.32",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.9",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
     "eslint": "^6.6.0",
     "nodemon": "^1.19.4",
+    "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.7.11"
+    "mongoose": "^5.7.11",
+    "morgan": "^1.9.1"
   }
 }
