Modificado README y package.json

--- a/package.json
+++ b/package.json
@@ -26,11 +26,6 @@
       "url": "https://github.com/dimplebharwani"
     },
     {
-      "name": "Ricardo Pineda",
-      "email": "richipineda2@gmail.com",
-      "url": "https://github.com/ririchi2"
-    },
-    {
       "name": "Jesús Ramos",
       "email": "jesusramosdev@gmail.com",
       "url": "https://github.com/JeramDev"
@@ -45,7 +40,11 @@
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
     "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.4",
+    "prettier": "1.19.1",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
