--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -p .",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "testw": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.23",
     "@types/mongoose": "^5.5.32",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.9",
