--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest",
     "testw": "jest --watch"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "rootDir": "./src"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fullstacktf/Look4Team-Backend.git"
@@ -34,7 +38,9 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.0.1",
     "@types/express": "^4.17.2",
+    "@types/express-rate-limit": "^3.3.3",
     "@types/jest": "^24.0.23",
     "@types/mongoose": "^5.5.32",
     "@types/morgan": "^1.7.37",
@@ -47,11 +53,14 @@
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "prettier": "1.19.1",
+    "ts-jest": "^24.2.0",
     "ts-node": "^8.5.2",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.3"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1"
   }
