--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "test": "jest",
-    "testw": "jest --watch"
+    "testw": "jest --watch",
+    "lint": "npx eslint src/**/*.ts"
   },
   "jest": {
     "preset": "ts-jest",
