--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 node_modules
 dist
+
+# VSCode settings
 .vscode
+
+# # Prettier config
+# .prettierrc
+
+# # ESLint config
+# .eslintignore
+# .eslintrc.json
+
+# # TS config
+# tsconfig.json
