--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ script:
   - npm run lint
   - npm test
   - npm run build
-deploy:
-  - echo 'Despliegue OK'
+after_success:
+  - bash scripts/deploy.sh
