--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.0.1",
     "@types/express": "^4.17.2",
     "@types/express-rate-limit": "^3.3.3",
     "@types/jest": "^24.0.23",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.32",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.9",
@@ -59,6 +61,7 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
