--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.0.1",
     "@types/express": "^4.17.2",
     "@types/express-rate-limit": "^3.3.3",
@@ -61,7 +60,8 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "bcrypt": "^3.0.7",
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
