--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc -p .",
-    "start": "node dist/server.js",
+    "start": "node build/server.js",
     "dev": "nodemon src/server.ts",
     "test": "jest",
     "testw": "jest --watch",
