--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,10 +33,10 @@
     //   "error",
     //   "unix"
     // ],
-    "quotes": [
-      "error",
-      "single"
-    ],
+    // "quotes": [
+    //   "error",
+    //   "single"
+    // ],
     "camelcase": "off",
     "@typescript-eslint/camelcase": ["error", { "properties": "always" }],
     "@typescript-eslint/explicit-function-return-type": ["error"],
