--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions" : {
-    "outDir": "./build",
+    "outDir": "./dist",
     "rootDir": "./src",
     "target": "es5",
     "esModuleInterop": true
