--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "outDir": "./build",
     "rootDir": "./src",
     "target": "es5",
-    "esModuleInterop": true
-    //"noImplicitAny": true
+    "esModuleInterop": true,
+    "noImplicitAny": false
   },
   "exclude": [
     "node_modules"
