--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@types/compression": "^1.0.1",
     "@types/express": "^4.17.2",
-    "@types/express-rate-limit": "^3.3.3",
     "@types/jest": "^24.0.23",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.32",
@@ -63,8 +62,8 @@
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1"
