Mejoras manejo de errores de los usuarios

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,14 @@
     "@typescript-eslint/camelcase": ["error", { "properties": "always" }],
     "@typescript-eslint/explicit-function-return-type": ["error"],
     "@typescript-eslint/typedef": ["error", { "memberVariableDeclaration": false }], 
-    "@typescript-eslint/no-unused-vars": ["error", { "args": "after-used" }],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { 
+        "args": "after-used", 
+        "argsIgnorePattern": "^_|^next$" 
+      }
+    ],
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_|^next$" }],
     "prettier/prettier": "error"
   }
 }
